templates/k3s/infisical/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: infisical-ingress
  namespace: infisical
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`infisical.prod.example.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: default
      services:
        - name: infisical-infisical-standalone-infisical
          port: 8080
  tls:
    secretName: prod-example-com-tls
